--- a/adyen-appexchange/main/default/classes/AdyenPaymentHelper.cls
+++ b/adyen-appexchange/main/default/classes/AdyenPaymentHelper.cls
@@ -6,7 +6,7 @@ public with sharing class AdyenPaymentHelper {
     public static String TEST_NR_BODY;
 
      /**
-     *  Receives Payement Gateway Context from AdyenAsyncAdapter, looks at the context type and then invokes the appropriate Capture or Refund operation
+     *  Receives Payment Gateway Context from AdyenAsyncAdapter, looks at the context type and then invokes the appropriate Capture or Refund operation
      * 
      * @param paymentGatewayContext
      * @return `CommercePayments.GatewayResponse`
@@ -19,109 +19,13 @@ public with sharing class AdyenPaymentHelper {
         System.debug('------------->Adyen payment req type: ' + paymentRequestType);
 
         try {
-            if     (paymentRequestType == CommercePayments.RequestType.Tokenize)              return tokenize((CommercePayments.PaymentMethodTokenizationRequest)paymentRequest);
-            else if(paymentRequestType == CommercePayments.RequestType.Authorize)             return authorize((CommercePayments.AuthorizationRequest)paymentRequest);
+            if     (paymentRequestType == CommercePayments.RequestType.Authorize)             return authorize((CommercePayments.AuthorizationRequest)paymentRequest);
             else if(paymentRequestType == CommercePayments.RequestType.Capture)               return AdyenCaptureHelper.capture((CommercePayments.CaptureRequest)paymentRequest);
             else if(paymentRequestType == CommercePayments.RequestType.ReferencedRefund)      return AdyenRefundHelper.refund((CommercePayments.ReferencedRefundRequest)paymentRequest);
-            else if(paymentRequestType == CommercePayments.RequestType.AuthorizationReversal) return cancel((CommercePayments.AuthorizationReversalRequest)paymentRequest);
+        //    else if(paymentRequestType == CommercePayments.RequestType.AuthorizationReversal) return cancel((CommercePayments.AuthorizationReversalRequest)paymentRequest);
             else return null;
         } catch (Exception e) {
-            return new CommercePayments.GatewayErrorResponse(String.valueOf(AdyenService.HTTP_ERROR_CODE), e.getMessage());
-        }
-    }
-
-    /**
-     * @param tokenizeRequest - The platform request to tokenize a payment method
-     * @return `CommercePayments.PaymentMethodTokenizationResponse` Includes Adyen token to use for future payments
-     * 
-     * @see https://docs.adyen.com/api-explorer/#/CheckoutService/v67/post/payments__example_payments-enableOneClick-raw
-     */
-    private static CommercePayments.GatewayResponse tokenize(CommercePayments.PaymentMethodTokenizationRequest tokenizeRequest) {
-
-        System.debug('--------->Adyen: enter tokenize method');
-
-        Adyen_Adapter__mdt adyenAdapterMdt = AdyenPaymentUtility.retrieveGatewayMetadata(AdyenConstants.DEFAULT_ADAPTER_NAME);
-        
-        // The Auth request body is the same as tokenize
-        AuthorisationRequest libRequest = new AuthorisationRequest();
-
-        libRequest.amount = new Amount();
-        libRequest.amount.currency_x = String.isNotEmpty(adyenAdapterMdt.Single_Currency_Code__c) ? adyenAdapterMdt.Single_Currency_Code__c : 'USD';
-        libRequest.amount.value = 0;
-        
-        CommercePayments.CardPaymentMethodRequest cpm = tokenizeRequest.cardPaymentMethod;
-        CardDetails paymentMethod = new CardDetails();
-        paymentMethod.number_x = cpm.cardNumber;
-        paymentMethod.expiryMonth = String.valueOf(cpm.expiryMonth);
-        paymentMethod.expiryYear = String.valueOf(cpm.expiryYear);
-        paymentMethod.holderName = cpm.cardHolderName;
-        paymentMethod.cvc = cpm.cvv;
-        libRequest.paymentMethod = paymentMethod;
-
-        CommercePayments.AddressRequest billingAddress = tokenizeRequest.address;
-        Address libAddress = new Address();
-        libAddress.houseNumberOrName = billingAddress.street;
-        libAddress.street = billingAddress.street;
-        libAddress.city = billingAddress.city;
-        libAddress.stateOrProvince = billingAddress?.state;
-        libAddress.postalcode = billingAddress.postalCode;
-        libAddress.country = billingAddress.country;
-        libRequest.billingAddress = libAddress;
-
-        libRequest.shopperInteraction = AuthorisationRequest.shopperInteractionEnum.Ecommerce;
-        libRequest.recurringProcessingModel = AuthorisationRequest.RecurringProcessingModelEnum.CardOnFile;
-        libRequest.merchantAccount = adyenAdapterMdt.Merchant_Account__c;
-        libRequest.shopperIp = tokenizeRequest?.ipAddress;
-        libRequest.storePaymentMethod = true;
-
-        // This is unique per transaction
-        libRequest.reference = AdyenPaymentUtility.getRandomNumber(16);
-
-        // This is unique per payment method, and must be re-constructable
-        libRequest.shopperReference = AdyenPaymentUtility.getShopperReference(
-            new CardPaymentMethod(
-                CardHolderName = cpm.cardHolderName,
-                Email = cpm.email
-            )
-        );
-
-        String body = AdyenPaymentUtility.makeAdyenCompatible(JSON.serialize(libRequest));
-
-        AdyenService client = new AdyenService(adyenAdapterMdt);
-        client.setEndpoint(adyenAdapterMdt.Tokenize_Endpoint__c);
-        client.setBody(body);
-
-        return processTokenizeResponse(client.execute());
-    }
-
-    private static CommercePayments.GatewayResponse processTokenizeResponse(HttpResponse response) {
-
-        Map<String,Object> body = (Map<String,Object>)JSON.deserializeUntyped(response.getBody());
-        String resultCode = (String) body.get('resultCode');
-        
-        if (resultCode != null) {
-            System.debug('-----> Adyen accepted request');
-            CommercePayments.PaymentMethodTokenizationResponse tokenizeResponse = new CommercePayments.PaymentMethodTokenizationResponse();
-            if (resultCode == 'Authorised') {
-                Map<String,Object> additionalData = (Map<String,Object>)body.get('additionalData');
-                tokenizeResponse.setGatewayToken((String)additionalData.get('recurring.recurringDetailReference'));
-                tokenizeResponse.setGatewayTokenDetails((String)additionalData.get('recurring.shopperReference'));
-                tokenizeResponse.setSalesforceResultCodeInfo(AdyenConstants.SUCCESS_SALESFORCE_RESULT_CODE_INFO);
-            } else {
-                tokenizeResponse.setGatewayResultCodeDescription((String)body.get('refusalReason'));
-                tokenizeResponse.setSalesforceResultCodeInfo(DECLINE_SALESFORCE_RESULT_CODE_INFO);
-            }
-
-            tokenizeResponse.setGatewayDate(System.now());
-
-            return tokenizeResponse;
-        } else {
-            System.debug('-----> Adyen rejected request');
-            String errorCode = String.valueOf(response.getStatusCode());
-            String errorMessage = (String)body.get('message');
-            CommercePayments.GatewayErrorResponse error = new CommercePayments.GatewayErrorResponse(errorCode, errorMessage);
-            
-            return error;
+            return new CommercePayments.GatewayErrorResponse(String.valueOf(AdyenConstants.HTTP_ERROR_CODE), e.getMessage());
         }
     }
 
@@ -138,65 +42,61 @@ public with sharing class AdyenPaymentHelper {
         System.debug('---------->Adyen: enter authorize method');
 
         Adyen_Adapter__mdt adyenAdapterMdt = AdyenPaymentUtility.retrieveGatewayMetadata(AdyenConstants.DEFAULT_ADAPTER_NAME);
-        Id cpmId = Test.isRunningTest() ? TEST_PMID : authRequest.paymentMethod.Id;
-        CardPaymentMethod cpm = [SELECT GatewayToken, GatewayTokenDetails, CardHolderName, Email
-                                 FROM CardPaymentMethod
-                                 WHERE Id = :cpmId];
 
+        CommercePayments.AuthApiPaymentMethodRequest paymentMethod = authRequest.paymentMethod;
         String currencyCode = authRequest.currencyIsoCode.toUppercase();
 
-        AuthorisationRequest libRequest = new AuthorisationRequest();
+        AuthorisationRequest authorizationRequest = new AuthorisationRequest();
 
-        libRequest.amount = new Amount();
-        libRequest.amount.currency_x = currencyCode;
-        libRequest.amount.value = (authRequest.amount * AdyenPaymentUtility.getAmountMultiplier(currencyCode)).longValue();
-        
-        CardDetails paymentMethod = new CardDetails();
-        paymentMethod.storedPaymentMethodId = cpm.GatewayToken;
-        libRequest.paymentMethod = paymentMethod;
+        authorizationRequest.amount = new Amount();
+        authorizationRequest.amount.currency_x = currencyCode;
+        authorizationRequest.amount.value = (authRequest.amount * AdyenPaymentUtility.getAmountMultiplier(currencyCode)).longValue();
 
-        libRequest.shopperReference = AdyenPaymentUtility.getShopperReference(cpm);
-        libRequest.reference = AdyenPaymentUtility.getRandomNumber(16);
-        libRequest.shopperInteraction = AuthorisationRequest.shopperInteractionEnum.ContAuth;
-        libRequest.recurringProcessingModel = AuthorisationRequest.RecurringProcessingModelEnum.CardOnFile;
-        libRequest.merchantAccount = adyenAdapterMdt.Merchant_Account__c;
-        libRequest.shopperIp = authRequest?.ipAddress;
+        CommercePayments.CardPaymentMethodRequest cpmRequest;
+        if(paymentMethod != null) {
+            cpmRequest = paymentMethod.cardPaymentMethod;
+            CardDetails cardDetails = new CardDetails();
+            cardDetails.number_x = cpmRequest.cardNumber;
+            cardDetails.expiryMonth = String.valueOf(cpmRequest.expiryMonth);
+            cardDetails.expiryYear = String.valueOf(cpmRequest.expiryYear);
+            cardDetails.holderName = cpmRequest.cardHolderName;
+            cardDetails.cvc = cpmRequest.cvv;
+            authorizationRequest.paymentMethod = cardDetails;
+        }
 
-        String body = AdyenPaymentUtility.makeAdyenCompatible(JSON.serialize(libRequest));
-
+        authorizationRequest.reference = AdyenPaymentUtility.getRandomNumber(16);
+        authorizationRequest.merchantAccount = adyenAdapterMdt.Merchant_Account__c;
+        authorizationRequest.shopperIp = authRequest?.ipAddress;
+        authorizationRequest.shopperInteraction = AuthorisationRequest.shopperInteractionEnum.ContAuth;
+        authorizationRequest.applicationInfo = AdyenPaymentUtility.getApplicationInfo(adyenAdapterMdt.System_Integrator_Name__c);
+        String body = AdyenPaymentUtility.makeAdyenCompatible(JSON.serialize(authorizationRequest));
         AdyenService client = new AdyenService(adyenAdapterMdt);
         client.setEndpoint(adyenAdapterMdt.Authorize_Endpoint__c);
         client.setBody(body);
-
-        return processAuthResponse(client.execute(), amount);
+        HttpResponse response = client.execute();
+        return processAuthResponse(response, authRequest.amount);
     }
 
     private static CommercePayments.GatewayResponse processAuthResponse(HttpResponse response, Double amount) {
-
         Map<String,Object> body = (Map<String,Object>)JSON.deserializeUntyped(response.getBody());
         String resultCode = (String)body.get('resultCode');
-        
+        CommercePayments.AuthorizationResponse salesforceAuthResponse = new CommercePayments.AuthorizationResponse();
         if(resultCode != null) {
             System.debug('-----> Adyen accepted request');
-
-            CommercePayments.AuthorizationResponse authResponse = new CommercePayments.AuthorizationResponse();
             if(resultCode == 'Authorised') {
                 Map<String,Object> additionalData = (Map<String,Object>)body.get('additionalData');
-                authResponse.setGatewayAuthCode((String)additionalData.get('authCode'));
-                authResponse.setSalesforceResultCodeInfo(AdyenConstants.SUCCESS_SALESFORCE_RESULT_CODE_INFO);
+                salesforceAuthResponse.setGatewayAuthCode((String)additionalData.get('authCode'));
+                salesforceAuthResponse.setSalesforceResultCodeInfo(AdyenConstants.SUCCESS_SALESFORCE_RESULT_CODE_INFO);
             } else {
-                authResponse.setGatewayResultCodeDescription((String)body.get('refusalReason'));
-                authResponse.setSalesforceResultCodeInfo(DECLINE_SALESFORCE_RESULT_CODE_INFO);
+                salesforceAuthResponse.setGatewayResultCodeDescription((String)body.get('refusalReason'));
+                salesforceAuthResponse.setSalesforceResultCodeInfo(AdyenConstants.DECLINE_SALESFORCE_RESULT_CODE_INFO);
             }
-
-            authResponse.setGatewayReferenceNumber((String)body.get('pspReference'));
-            authResponse.setAmount(amount);
-            authResponse.setGatewayDate(System.now());
-
-            return authResponse;
+            salesforceAuthResponse.setGatewayReferenceNumber((String)body.get('pspReference'));
+            salesforceAuthResponse.setAmount(amount);
+            salesforceAuthResponse.setGatewayDate(System.now());
+            return salesforceAuthResponse;
         } else {
             System.debug('-----> Adyen rejected request');
-
             return new CommercePayments.GatewayErrorResponse(
                 String.valueOf(response.getStatusCode()),
                 String.valueOf(body.get('message'))
@@ -214,7 +114,7 @@ public with sharing class AdyenPaymentHelper {
      * * General flow is AdyenService to post request JSON --> populateReferencedRefundResponse
      *
      * @see AdyenService
-     */
+
     private static CommercePayments.GatewayResponse cancel(CommercePayments.AuthorizationReversalRequest cancelRequest) {
         
         PaymentAuthorization pa = AdyenPaymentUtility.retrievePaymentAuthorization(cancelRequest.PaymentAuthorizationId);
@@ -252,7 +152,7 @@ public with sharing class AdyenPaymentHelper {
         cancelResponse.setGatewayDate(System.now());
         cancelResponse.setGatewayMessage(adyenResponse.status);
 
-        if(adyenResponse != null && response.getStatusCode() != AdyenService.HTTP_ERROR_CODE) { // HTTP connection with Adyen was successful
+        if(adyenResponse != null && response.getStatusCode() != AdyenConstants.HTTP_ERROR_CODE) { // HTTP connection with Adyen was successful
             if(adyenResponse.errorCode == null) { // Adyen accepted Cancel request
                 cancelResponse.setGatewayReferenceNumber(adyenResponse.pspReference);
                 if(adyenResponse.status == 'received') cancelResponse.setGatewayMessage('[cancel-received]');
@@ -276,6 +176,7 @@ public with sharing class AdyenPaymentHelper {
         }
         return cancelResponse;
     }
+    */
 
     /**
      * ------------------------------------------------------------------------
@@ -314,14 +215,14 @@ public with sharing class AdyenPaymentHelper {
             if(notificationSaveResult != null) {
                 if(notificationSaveResult.isSuccess()) { // Notification is accepted by the platform
                     gatewayNotificationResponse.setStatusCode(AdyenConstants.HTTP_SUCCESS_CODE);
-                    gatewayNotificationResponse.setResponseBody(Blob.valueOf( NOTIFICATION_ACCEPTED_RESPONSE ));
+                    gatewayNotificationResponse.setResponseBody(Blob.valueOf( AdyenConstants.NOTIFICATION_ACCEPTED_RESPONSE ));
                     System.debug('---->Exiting AdyenPaymentHelper.handleAsyncNotificationCallback after the notification is accepted = ' + gatewayNotificationResponse);
                 } else { // Notification is not accepted by the platform, generate system event
                     String msg = '[accepted] ';
                     if(notificationSaveResult != null && notificationSaveResult.getErrorMessage() != null) {
                         msg += notificationSaveResult.getErrorMessage();
                     }
-                    gatewayNotificationResponse.setStatusCode(Integer.valueOf(AdyenService.HTTP_ERROR_CODE));
+                    gatewayNotificationResponse.setStatusCode(Integer.valueOf(AdyenConstants.HTTP_ERROR_CODE));
                     gatewayNotificationResponse.setResponseBody(Blob.valueOf(msg));
                 }
             } else {
